--- a/media/main.css
+++ b/media/main.css
@@ -45,6 +45,22 @@ body {
 	min-height: 30px
 }
 
+.bot-message {
+	margin-left: 15px;
+	margin-bottom: 10px;
+	padding: 4px;
+	border: 1px solid rgb(30, 60, 70);
+	background-color: rgb(30, 60, 70);
+}
+
+.user-message {
+	margin-right: 15px;
+	margin-bottom: 10px;
+	padding: 4px;
+	border: 1px solid rgb(56, 56, 56);
+	background-color: rgb(56, 56, 56);
+}
+
 .user-input {
 	padding: 4px;
 }
