--- a/media/main.css
+++ b/media/main.css
@@ -79,7 +79,7 @@ body {
 .progress-bar-value {
   width: 100%;
   height: 100%;
-  background-color: var(--vscode-);
+  background-color: var(--vscode-button-background);
   animation: indeterminateAnimation 1s infinite linear;
   transform-origin: 0% 50%;
 }
