feat(chat-ui): add new home page UI
Appeared, that we need to specify not only API-token, but also catalogue-id. That's I added new settings form with inputs for catalogue-id and API-token

--- a/media/main.css
+++ b/media/main.css
@@ -84,6 +84,18 @@ body {
   transform-origin: 0% 50%;
 }
 
+.small-text {
+	font-size: 11px;
+}
+
+.settings-input {
+	margin-bottom: 4px;
+}
+
+.home-help-text {
+	margin-top: 24px;
+}
+
 @keyframes indeterminateAnimation {
   0% {
     transform:  translateX(0) scaleX(0);
