feat(chat-ui): add handling breaks in text

--- a/media/main.css
+++ b/media/main.css
@@ -42,7 +42,8 @@ body {
 .chat-box {
 	margin-bottom: 8px;
 	padding: 4px;
-	min-height: 30px
+	min-height: 30px;
+	white-space: pre-wrap;
 }
 
 .bot-message {
