--- a/media/main.css
+++ b/media/main.css
@@ -62,6 +62,11 @@ body {
 	background-color: rgb(56, 56, 56);
 }
 
+pre {
+	background-color: var(--vscode-textPreformat-background);
+	text-wrap: balance;
+}
+
 .user-input {
 	padding: 4px;
 }
