--- a/media/main.css
+++ b/media/main.css
@@ -52,6 +52,7 @@ body {
 	padding: 4px;
 	border: 1px solid rgb(30, 60, 70);
 	background-color: rgb(30, 60, 70);
+	color: white;
 }
 
 .user-message {
@@ -60,6 +61,7 @@ body {
 	padding: 4px;
 	border: 1px solid rgb(56, 56, 56);
 	background-color: rgb(56, 56, 56);
+	color: white;
 }
 
 pre {
